# skillbox_django

./: .env  .gitignore  Dockerfile  demo.py  docker-compose.yaml  pyproject.toml
mysite/: db.sqlite3  logs.txt  shopapp-fixtures.json
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.mo  django.po
mysite/locale/ru/LC_MESSAGES/: django.mo  django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  command.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: auth-fixtures.json  data.json  data_orders.json  order-fixtures.json  products-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_alter_order_user.py  0008_product_created_by.py  0009_order_receipt.py  0010_product_preview.py  0011_productimage.py  0012_alter_productimage_image.py  0013_alter_order_options_alter_product_options_and_more.py
(+29 files in other folders)
